# ESP32-MPU9250

./: .cproject  .project  CMakeLists.txt  README.md  sdkconfig
components/esp-dht11/: CMakeLists.txt  esp-dht11.c
components/esp-dht11/include/: esp-dht11.h
components/esp-mpu9250/: CMakeLists.txt  Kconfig.projbuild  i2c_init.c  inv_mpu.c  inv_mpu_dmp_motion_driver.c  mpu9250.c
components/esp-mpu9250/include/: dmpKey.h  dmpmap.h  i2c_init.h  inv_mpu.h  inv_mpu_dmp_motion_driver.h  mpu9250.h  mpu9250_map.h
main/: CMakeLists.txt  main.c  simple_read.c  test.c
